fix: board 페이징 완료

--- a/src/main/resources/static/html/header.html
+++ b/src/main/resources/static/html/header.html
@@ -129,7 +129,7 @@
                             </li>
                             <li class="menu-item-has-children"><a href="#">Pages</a>
                                 <ul>
-                                    <li><a href="../contact.html">Contact</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
                                     <li><a href="team.html">Team</a></li>
                                     <li><a href="team-details.html">Team Details</a></li>
                                     <li><a href="case-study.html">Case Study Details</a></li>
@@ -141,14 +141,14 @@
                 </div>
                 <div class="cs-main_header_right">
                     <div class="cs-toolbox">
-              <span class="cs-icon_btn">
-                <span class="cs-icon_btn_in">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </span>
-              </span>
+                      <span class="cs-icon_btn">
+                        <span class="cs-icon_btn_in">
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                        </span>
+                      </span>
                     </div>
                 </div>
             </div>
